--- a/shared/oae/css/oae.components.css
+++ b/shared/oae/css/oae.components.css
@@ -823,7 +823,7 @@ div.oae-thumbnail i[class^="icon-"] {
 /* Left hand navigation */
 
 .oae-lhnavigation {
-    margin-left: 10px;
+    margin-left: 15px;
     margin-top: -5px;
     position: absolute;
     width: 210px;
@@ -888,26 +888,20 @@ div.oae-thumbnail i[class^="icon-"] {
 /* Page content */
 
 .oae-page {
-    min-width: 280px;
+    min-width: 275px;
     padding: 5px 25px;
 }
 
 .oae-lhnavigation.oae-lhnav-expanded + .oae-page {
     min-width: 480px;
-    padding: 5px 25px 5px 220px;
-}
-
-/* iPhone resolution */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-    .oae-page {
-        padding: 5px 10px 50px;
-    }
+    padding: 5px 25px 5px 225px;
 }
 
 @media (min-width: 992px) {
     .oae-page {
-        padding: 5px 25px 5px 220px !important;
+        padding: 5px 25px 5px 225px !important;
     }
+
     .oae-lhnavigation {
         opacity: 1 !important;
         width: 210px !important;
